--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
+ENV_MODE=dev
+DEV_DB_URL=postgresql://postgres:OaeLyLXCTOGiWziFWVJiNHYFkPkOOZOc@shinkansen.proxy.rlwy.net:28490/railway
+DATABASE_URL=postgresql://postgres:OaeLyLXCTOGiWziFWVJiNHYFkPkOOZOc@shinkansen.proxy.rlwy.net:28490/railway  # Production DB URL (same as test DB)
 
+USER_NAME=andybrvt
+PASSWORD=password!
+
+TWILIO_ACCOUNT_SID=ACb89d89dc623104b2d5aac29c7a3ec254
+TWILIO_AUTH_TOKEN=44b92fe065af382d3c8f1d95f303f59b
