--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ email_validator==2.2.0
 fastapi==0.111.0
 fastapi-cli==0.0.7
 frozenlist==1.5.0
+fuzzywuzzy==0.18.0
 greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.7
